rewritten main GUI to work with wxSmith + various small changes
git-svn-id: svn://svn.code.sf.net/p/partmodproject/code/trunk@19 3d63fe75-a90b-4577-b595-b0b07fb0d485

--- a/wxGUI/wxsmith/DlgCreateBackup.wxs
+++ b/wxGUI/wxsmith/DlgCreateBackup.wxs
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <wxsmith>
 	<object class="wxDialog" name="DlgCreateBackup">
+		<title>Create a partition table backup</title>
 		<size>328,156</size>
 		<object class="wxStaticText" name="ID_STATICTEXT1" variable="StaticText1" member="yes">
 			<label>Backup file name:</label>
