--- a/wxGUI/wxsmith/DlgRestoreBackup.wxs
+++ b/wxGUI/wxsmith/DlgRestoreBackup.wxs
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <wxsmith>
 	<object class="wxDialog" name="DlgRestoreBackup">
+		<title>Restore partition table</title>
 		<size>328,156</size>
 		<pos_arg>1</pos_arg>
 		<size_arg>1</size_arg>
