--- a/wxGUI/wxsmith/DlgNewPart.wxs
+++ b/wxGUI/wxsmith/DlgNewPart.wxs
@@ -2,43 +2,85 @@
 <wxsmith>
 	<object class="wxDialog" name="DlgNewPart">
 		<title>Create a new partition</title>
-		<size>370,215</size>
 		<id_arg>0</id_arg>
-		<object class="wxSpinCtrl" name="IDA_HSHDGSDHUF" variable="SpinCtrlPartitionSize" member="yes">
-			<value>0</value>
-			<max>10000000</max>
-			<pos>48,64</pos>
-		</object>
-		<object class="wxChoice" name="ID_SIZE_MULTIPLIER" variable="ChoiceSizeMul" member="yes">
-			<pos>184,64</pos>
-			<size>112,21</size>
-		</object>
-		<object class="wxStaticText" name="ID_STATICTEXT1" variable="StaticText1" member="yes">
-			<label>Enter size of partition:</label>
-			<pos>48,40</pos>
-			<size>112,13</size>
-		</object>
-		<object class="wxButton" name="ID_OK" variable="ButtonOK" member="yes">
-			<label>OK</label>
-			<pos>72,144</pos>
-			<handler function="OnButtonOKClick" entry="EVT_BUTTON" />
-		</object>
-		<object class="wxButton" name="wxID_CANCEL" variable="ButtonCancel" member="yes">
-			<label>Cancel</label>
-			<pos>184,144</pos>
-		</object>
-		<object class="wxChoice" name="ID_CHOICE1" variable="ChoicePartitionType" member="yes">
-			<pos>48,112</pos>
-			<size>120,21</size>
-			<handler function="OnChoicePartitionTypeSelect" entry="EVT_CHOICE" />
-		</object>
-		<object class="wxStaticText" name="ID_STATICTEXT2" variable="StaticText2" member="yes">
-			<label>Select partition type:</label>
-			<pos>48,96</pos>
-			<size>112,13</size>
-		</object>
-		<object class="wxChoice" name="ID_CHOICE2" variable="ChoiceFsType" member="yes">
-			<pos>184,112</pos>
+		<object class="wxBoxSizer" variable="BoxSizer1" member="no">
+			<orient>wxVERTICAL</orient>
+			<object class="sizeritem">
+				<object class="wxStaticBoxSizer" variable="StaticBoxSizer1" member="no">
+					<label>Partition size</label>
+					<object class="sizeritem">
+						<object class="wxSpinCtrl" name="ID_SPINCTRL1" variable="SpinCtrlPartitionSize" member="yes">
+							<value>0</value>
+						</object>
+						<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+						<border>5</border>
+						<option>1</option>
+					</object>
+					<object class="sizeritem">
+						<object class="wxChoice" name="ID_CHOICE1" variable="ChoiceSizeMul" member="yes" />
+						<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+						<border>5</border>
+						<option>1</option>
+					</object>
+				</object>
+				<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+				<border>5</border>
+				<option>1</option>
+			</object>
+			<object class="sizeritem">
+				<object class="wxGridSizer" variable="GridSizer1" member="no">
+					<cols>2</cols>
+					<rows>2</rows>
+					<object class="sizeritem">
+						<object class="wxStaticText" name="ID_STATICTEXT1" variable="StaticText1" member="yes">
+							<label>Partition type</label>
+						</object>
+						<flag>wxALL|wxALIGN_RIGHT|wxALIGN_CENTER_VERTICAL</flag>
+						<border>5</border>
+						<option>1</option>
+					</object>
+					<object class="sizeritem">
+						<object class="wxChoice" name="ID_CHOICE2" variable="ChoicePartitionType" member="yes" />
+						<flag>wxALL|wxALIGN_LEFT|wxALIGN_CENTER_VERTICAL</flag>
+						<border>5</border>
+						<option>1</option>
+					</object>
+					<object class="sizeritem">
+						<object class="wxStaticText" name="ID_STATICTEXT2" variable="StaticText2" member="yes">
+							<label>File system type</label>
+						</object>
+						<flag>wxALL|wxALIGN_RIGHT|wxALIGN_CENTER_VERTICAL</flag>
+						<border>5</border>
+						<option>1</option>
+					</object>
+					<object class="sizeritem">
+						<object class="wxChoice" name="ID_CHOICE3" variable="ChoiceFsType" member="yes" />
+						<flag>wxALL|wxALIGN_LEFT|wxALIGN_CENTER_VERTICAL</flag>
+						<border>5</border>
+						<option>1</option>
+					</object>
+				</object>
+				<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+				<border>5</border>
+				<option>1</option>
+			</object>
+			<object class="sizeritem">
+				<object class="wxStdDialogButtonSizer" variable="StdDialogButtonSizer1" member="no">
+					<object class="button">
+						<object class="wxButton" name="wxID_OK">
+							<label>Create</label>
+						</object>
+					</object>
+					<object class="button">
+						<object class="wxButton" name="wxID_CANCEL">
+							<label></label>
+						</object>
+					</object>
+				</object>
+				<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+				<border>5</border>
+				<option>1</option>
+			</object>
 		</object>
 	</object>
 </wxsmith>
