--- a/wxGUI/wxsmith/DlgCreateBackup.wxs
+++ b/wxGUI/wxsmith/DlgCreateBackup.wxs
@@ -2,31 +2,73 @@
 <wxsmith>
 	<object class="wxDialog" name="DlgCreateBackup">
 		<title>Create a partition table backup</title>
-		<size>328,156</size>
-		<object class="wxStaticText" name="ID_STATICTEXT1" variable="StaticText1" member="yes">
-			<label>Backup file name:</label>
-			<pos>24,32</pos>
-			<size>152,13</size>
-		</object>
-		<object class="wxTextCtrl" name="ID_TEXTCTRL1" variable="TextBackupFileName" member="yes">
-			<value>backup.ptb</value>
-			<pos>24,48</pos>
-			<size>168,21</size>
-		</object>
-		<object class="wxButton" name="ID_BROWSE" variable="ButtonBrowse" member="yes">
-			<label>Browse...</label>
-			<pos>208,48</pos>
-			<handler function="OnButtonBrowseClick" entry="EVT_BUTTON" />
-		</object>
-		<object class="wxButton" name="ID_CREATE_BACKUP" variable="ButtonCreateBackup" member="yes">
-			<label>Create backup</label>
-			<pos>56,96</pos>
-			<handler function="OnButtonCreateBackupClick" entry="EVT_BUTTON" />
-		</object>
-		<object class="wxButton" name="ID_CANCEL" variable="ButtonClose" member="yes">
-			<label>Cancel</label>
-			<pos>168,96</pos>
-			<handler function="OnButtonCloseClick" entry="EVT_BUTTON" />
+		<object class="wxBoxSizer" variable="BoxSizer1" member="no">
+			<orient>wxVERTICAL</orient>
+			<object class="sizeritem">
+				<object class="wxStaticBoxSizer" variable="StaticBoxSizer1" member="no">
+					<label>Save backup to</label>
+					<object class="sizeritem">
+						<object class="wxTextCtrl" name="ID_TEXTCTRL1" variable="TextBackupFileName" member="yes">
+							<value>backup.ptb</value>
+						</object>
+						<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+						<border>5</border>
+						<option>1</option>
+					</object>
+					<object class="sizeritem">
+						<object class="wxButton" name="ID_BUTTON1" variable="ButtonBrowse" member="yes">
+							<label>Browse...</label>
+							<handler function="OnButtonBrowseClick" entry="EVT_BUTTON" />
+						</object>
+						<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+						<border>5</border>
+						<option>1</option>
+					</object>
+				</object>
+				<flag>wxALL|wxEXPAND|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+				<border>5</border>
+				<option>1</option>
+			</object>
+			<object class="sizeritem">
+				<object class="wxBoxSizer" variable="BoxSizer2" member="no">
+					<object class="sizeritem">
+						<object class="wxStaticText" name="ID_STATICTEXT1" variable="StaticText1" member="yes">
+							<label>Description (optional)</label>
+						</object>
+						<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+						<border>5</border>
+						<option>1</option>
+					</object>
+					<object class="sizeritem">
+						<object class="wxTextCtrl" name="ID_TEXTCTRL2" variable="TextDescription" member="yes">
+							<maxlength>128</maxlength>
+						</object>
+						<flag>wxALL|wxEXPAND|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+						<border>5</border>
+						<option>1</option>
+					</object>
+				</object>
+				<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+				<border>5</border>
+				<option>1</option>
+			</object>
+			<object class="sizeritem">
+				<object class="wxStdDialogButtonSizer" variable="StdDialogButtonSizer1" member="no">
+					<object class="button">
+						<object class="wxButton" name="wxID_OK">
+							<label></label>
+						</object>
+					</object>
+					<object class="button">
+						<object class="wxButton" name="wxID_CANCEL">
+							<label></label>
+						</object>
+					</object>
+				</object>
+				<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+				<border>5</border>
+				<option>1</option>
+			</object>
 		</object>
 		<object class="wxFileDialog" variable="FileDialog1" member="yes">
 			<message>Select file</message>
