--- a/wxGUI/wxsmith/DlgOpenDiskImage.wxs
+++ b/wxGUI/wxsmith/DlgOpenDiskImage.wxs
@@ -2,72 +2,127 @@
 <wxsmith>
 	<object class="wxDialog" name="DlgOpenDiskImage">
 		<title>Open a disk image</title>
-		<size>345,267</size>
 		<pos_arg>1</pos_arg>
 		<size_arg>1</size_arg>
-		<object class="wxTextCtrl" name="ID_TEXTCTRL1" variable="TextImagePath" member="yes">
-			<pos>24,48</pos>
-			<size>192,21</size>
-		</object>
-		<object class="wxButton" name="ID_BUTTON1" variable="ButtonBrowse" member="yes">
-			<label>Browse...</label>
-			<pos>240,48</pos>
-			<handler function="OnButtonBrowseClick" entry="EVT_BUTTON" />
-		</object>
-		<object class="wxStaticText" name="ID_STATICTEXT1" variable="StaticText1" member="yes">
-			<label>Disk image file path:</label>
-			<pos>24,32</pos>
-			<size>144,13</size>
-		</object>
-		<object class="wxButton" name="ID_BUTTON2" variable="ButtonOK" member="yes">
-			<label>Open</label>
-			<pos>72,216</pos>
-			<handler function="OnButtonOKClick" entry="EVT_BUTTON" />
-		</object>
-		<object class="wxButton" name="wxID_CANCEL" variable="Button3" member="yes">
-			<label>Cancel</label>
-			<pos>176,216</pos>
-		</object>
-		<object class="wxStaticBox" name="ID_STATICBOX1" variable="StaticBox1" member="yes">
-			<label>Disk image properties</label>
-			<pos>24,80</pos>
-			<size>288,128</size>
-		</object>
-		<object class="wxTextCtrl" name="ID_TEXTCTRL2" variable="TextBPS" member="yes">
-			<pos>40,120</pos>
-			<size>88,21</size>
-		</object>
-		<object class="wxTextCtrl" name="ID_TEXTCTRL3" variable="TextTPC" member="yes">
-			<pos>168,120</pos>
-			<size>88,21</size>
-		</object>
-		<object class="wxTextCtrl" name="ID_TEXTCTRL4" variable="TextSPT" member="yes">
-			<pos>40,176</pos>
-			<size>88,21</size>
-		</object>
-		<object class="wxTextCtrl" name="ID_TEXTCTRL5" variable="TextCylinders" member="yes">
-			<pos>168,176</pos>
-			<size>88,21</size>
-		</object>
-		<object class="wxStaticText" name="ID_STATICTEXT2" variable="StaticText2" member="yes">
-			<label>Bytes per sector</label>
-			<pos>40,104</pos>
-			<size>88,13</size>
-		</object>
-		<object class="wxStaticText" name="ID_STATICTEXT3" variable="StaticText3" member="yes">
-			<label>Sectors per track</label>
-			<pos>40,160</pos>
-			<size>96,13</size>
-		</object>
-		<object class="wxStaticText" name="ID_STATICTEXT4" variable="StaticText4" member="yes">
-			<label>Tracks per cylinder</label>
-			<pos>168,104</pos>
-			<size>96,13</size>
-		</object>
-		<object class="wxStaticText" name="ID_STATICTEXT5" variable="StaticText5" member="yes">
-			<label>Cylinders</label>
-			<pos>168,160</pos>
-			<size>80,13</size>
+		<object class="wxFlexGridSizer" variable="FlexGridSizer1" member="no">
+			<cols>1</cols>
+			<rows>3</rows>
+			<object class="sizeritem">
+				<object class="wxStaticBoxSizer" variable="StaticBoxSizer1" member="no">
+					<label>Disk image file</label>
+					<object class="sizeritem">
+						<object class="wxTextCtrl" name="ID_TEXTCTRL1" variable="TextImagePath" member="yes">
+							<style>wxTE_PROCESS_ENTER</style>
+							<handler function="OnTextImagePathTextEnter" entry="EVT_TEXT_ENTER" />
+						</object>
+						<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+						<border>5</border>
+						<option>1</option>
+					</object>
+					<object class="sizeritem">
+						<object class="wxButton" name="ID_BUTTON1" variable="ButtonBrowse" member="yes">
+							<label>Browse...</label>
+							<handler function="OnButtonBrowseClick" entry="EVT_BUTTON" />
+						</object>
+						<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+						<border>5</border>
+						<option>1</option>
+					</object>
+				</object>
+				<flag>wxALL|wxEXPAND|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+				<border>5</border>
+				<option>1</option>
+			</object>
+			<object class="sizeritem">
+				<object class="wxStaticBoxSizer" variable="StaticBoxSizer2" member="no">
+					<label>Geometry</label>
+					<object class="sizeritem">
+						<object class="wxGridSizer" variable="GridSizer1" member="no">
+							<cols>2</cols>
+							<rows>4</rows>
+							<object class="sizeritem">
+								<object class="wxStaticText" name="ID_STATICTEXT1" variable="StaticText1" member="yes">
+									<label>Bytes per sector</label>
+								</object>
+								<flag>wxALL|wxALIGN_RIGHT|wxALIGN_CENTER_VERTICAL</flag>
+								<border>5</border>
+								<option>1</option>
+							</object>
+							<object class="sizeritem">
+								<object class="wxTextCtrl" name="ID_TEXTCTRL2" variable="TextBPS" member="yes" />
+								<flag>wxALL|wxALIGN_LEFT|wxALIGN_CENTER_VERTICAL</flag>
+								<border>5</border>
+								<option>1</option>
+							</object>
+							<object class="sizeritem">
+								<object class="wxStaticText" name="ID_STATICTEXT2" variable="StaticText2" member="yes">
+									<label>Sectors per track</label>
+								</object>
+								<flag>wxALL|wxALIGN_RIGHT|wxALIGN_CENTER_VERTICAL</flag>
+								<border>5</border>
+								<option>1</option>
+							</object>
+							<object class="sizeritem">
+								<object class="wxTextCtrl" name="ID_TEXTCTRL3" variable="TextSPT" member="yes" />
+								<flag>wxALL|wxALIGN_LEFT|wxALIGN_CENTER_VERTICAL</flag>
+								<border>5</border>
+								<option>1</option>
+							</object>
+							<object class="sizeritem">
+								<object class="wxStaticText" name="ID_STATICTEXT3" variable="StaticText3" member="yes">
+									<label>Tracks per cylinder</label>
+								</object>
+								<flag>wxALL|wxALIGN_RIGHT|wxALIGN_CENTER_VERTICAL</flag>
+								<border>5</border>
+								<option>1</option>
+							</object>
+							<object class="sizeritem">
+								<object class="wxTextCtrl" name="ID_TEXTCTRL4" variable="TextTPC" member="yes" />
+								<flag>wxALL|wxALIGN_LEFT|wxALIGN_CENTER_VERTICAL</flag>
+								<border>5</border>
+								<option>1</option>
+							</object>
+							<object class="sizeritem">
+								<object class="wxStaticText" name="ID_STATICTEXT4" variable="StaticText4" member="yes">
+									<label>Cylinders</label>
+								</object>
+								<flag>wxALL|wxALIGN_RIGHT|wxALIGN_CENTER_VERTICAL</flag>
+								<border>5</border>
+								<option>1</option>
+							</object>
+							<object class="sizeritem">
+								<object class="wxTextCtrl" name="ID_TEXTCTRL5" variable="TextCylinders" member="yes" />
+								<flag>wxALL|wxALIGN_LEFT|wxALIGN_CENTER_VERTICAL</flag>
+								<border>5</border>
+								<option>1</option>
+							</object>
+						</object>
+						<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+						<border>5</border>
+						<option>1</option>
+					</object>
+				</object>
+				<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+				<border>5</border>
+				<option>1</option>
+			</object>
+			<object class="sizeritem">
+				<object class="wxStdDialogButtonSizer" variable="StdDialogButtonSizer1" member="no">
+					<object class="button">
+						<object class="wxButton" name="wxID_OK">
+							<label></label>
+						</object>
+					</object>
+					<object class="button">
+						<object class="wxButton" name="wxID_CANCEL">
+							<label></label>
+						</object>
+					</object>
+				</object>
+				<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+				<border>5</border>
+				<option>1</option>
+			</object>
 		</object>
 	</object>
 </wxsmith>
