--- a/wxGUI/wxsmith/DlgRestoreBackup.wxs
+++ b/wxGUI/wxsmith/DlgRestoreBackup.wxs
@@ -2,36 +2,149 @@
 <wxsmith>
 	<object class="wxDialog" name="DlgRestoreBackup">
 		<title>Restore partition table</title>
-		<size>328,156</size>
-		<pos_arg>1</pos_arg>
-		<size_arg>1</size_arg>
-		<object class="wxStaticText" name="ID_STATICTEXT1" variable="StaticText1" member="yes">
-			<label>Backup file name</label>
-			<pos>24,32</pos>
-			<size>128,13</size>
-		</object>
-		<object class="wxTextCtrl" name="ID_TEXTCTRL1" variable="TextBackupFileName" member="yes">
-			<value>backup.ptb</value>
-			<pos>24,48</pos>
-			<size>168,21</size>
-		</object>
-		<object class="wxButton" name="ID_BUTTON1" variable="ButtonBrowse" member="yes">
-			<label>Browse...</label>
-			<pos>208,48</pos>
-			<handler function="OnButtonBrowseClick" entry="EVT_BUTTON" />
-		</object>
-		<object class="wxButton" name="ID_BUTTON2" variable="ButtonRestore" member="yes">
-			<label>Restore</label>
-			<pos>64,96</pos>
-			<handler function="OnButtonRestoreClick" entry="EVT_BUTTON" />
-		</object>
-		<object class="wxButton" name="ID_BUTTON3" variable="ButtonCancel" member="yes">
-			<label>Cancel</label>
-			<pos>160,96</pos>
-			<handler function="OnButtonCancelClick" entry="EVT_BUTTON" />
+		<id_arg>0</id_arg>
+		<object class="wxFlexGridSizer" variable="FlexGridSizer1" member="no">
+			<cols>1</cols>
+			<rows>4</rows>
+			<growablerows>2,3</growablerows>
+			<object class="sizeritem">
+				<object class="wxStaticBoxSizer" variable="StaticBoxSizer1" member="no">
+					<label>Backup file</label>
+					<object class="sizeritem">
+						<object class="wxTextCtrl" name="ID_TEXTCTRL1" variable="TextBackupFileName" member="yes">
+							<style>wxTE_PROCESS_ENTER</style>
+							<handler function="OnTextBackupFileNameTextEnter" entry="EVT_TEXT_ENTER" />
+						</object>
+						<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+						<border>5</border>
+						<option>1</option>
+					</object>
+					<object class="sizeritem">
+						<object class="wxButton" name="ID_BUTTON1" variable="ButtonBrowse" member="yes">
+							<label>Browse...</label>
+							<handler function="OnButtonBrowseClick" entry="EVT_BUTTON" />
+						</object>
+						<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+						<border>5</border>
+						<option>1</option>
+					</object>
+				</object>
+				<flag>wxALL|wxEXPAND|wxALIGN_LEFT|wxALIGN_CENTER_VERTICAL</flag>
+				<border>5</border>
+				<option>1</option>
+			</object>
+			<object class="sizeritem">
+				<object class="wxStaticBoxSizer" variable="StaticBoxSizer2" member="no">
+					<label>Backup file properties</label>
+					<object class="sizeritem">
+						<object class="wxFlexGridSizer" variable="FlexGridSizer2" member="no">
+							<cols>2</cols>
+							<rows>4</rows>
+							<object class="sizeritem">
+								<object class="wxStaticText" name="ID_STATICTEXT1" variable="StaticText1" member="yes">
+									<label>Number of sectors</label>
+								</object>
+								<flag>wxALL|wxALIGN_RIGHT|wxALIGN_CENTER_VERTICAL</flag>
+								<border>5</border>
+								<option>1</option>
+							</object>
+							<object class="sizeritem">
+								<object class="wxTextCtrl" name="ID_TEXTCTRL2" variable="TextNumberOfSectors" member="yes">
+									<style>wxTE_READONLY</style>
+								</object>
+								<flag>wxALL|wxALIGN_LEFT|wxALIGN_CENTER_VERTICAL</flag>
+								<border>5</border>
+								<option>1</option>
+							</object>
+							<object class="sizeritem">
+								<object class="wxStaticText" name="ID_STATICTEXT2" variable="StaticText2" member="yes">
+									<label>Number of partitions</label>
+								</object>
+								<flag>wxALL|wxALIGN_RIGHT|wxALIGN_CENTER_VERTICAL</flag>
+								<border>5</border>
+								<option>1</option>
+							</object>
+							<object class="sizeritem">
+								<object class="wxTextCtrl" name="ID_TEXTCTRL3" variable="TextNumPart" member="yes">
+									<style>wxTE_READONLY</style>
+								</object>
+								<flag>wxALL|wxALIGN_LEFT|wxALIGN_CENTER_VERTICAL</flag>
+								<border>5</border>
+								<option>1</option>
+							</object>
+							<object class="sizeritem">
+								<object class="wxStaticText" name="ID_STATICTEXT3" variable="StaticText3" member="yes">
+									<label>Checksum</label>
+								</object>
+								<flag>wxALL|wxALIGN_RIGHT|wxALIGN_CENTER_VERTICAL</flag>
+								<border>5</border>
+								<option>1</option>
+							</object>
+							<object class="sizeritem">
+								<object class="wxTextCtrl" name="ID_TEXTCTRL4" variable="TextChecksum" member="yes">
+									<tooltip>CRC32 checksum of the backup file</tooltip>
+									<style>wxTE_READONLY</style>
+								</object>
+								<flag>wxALL|wxALIGN_LEFT|wxALIGN_CENTER_VERTICAL</flag>
+								<border>5</border>
+								<option>1</option>
+							</object>
+							<object class="sizeritem">
+								<object class="wxStaticText" name="ID_STATICTEXT4" variable="StaticText4" member="yes">
+									<label>Description</label>
+								</object>
+								<flag>wxALL|wxALIGN_RIGHT|wxALIGN_CENTER_VERTICAL</flag>
+								<border>5</border>
+								<option>1</option>
+							</object>
+							<object class="sizeritem">
+								<object class="wxTextCtrl" name="ID_TEXTCTRL5" variable="TextDescription" member="yes">
+									<size>66,30d</size>
+									<tooltip>Description entered by the creator of the backup</tooltip>
+									<style>wxTE_MULTILINE|wxTE_READONLY</style>
+								</object>
+								<flag>wxALL|wxEXPAND|wxALIGN_LEFT|wxALIGN_CENTER_VERTICAL</flag>
+								<border>5</border>
+								<option>1</option>
+							</object>
+						</object>
+						<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+						<border>5</border>
+						<option>1</option>
+					</object>
+				</object>
+				<flag>wxALL|wxALIGN_LEFT|wxALIGN_CENTER_VERTICAL</flag>
+				<border>5</border>
+				<option>1</option>
+			</object>
+			<object class="sizeritem">
+				<object class="wxBoxSizer" variable="BoxSizer1" member="no">
+					<object class="sizeritem">
+						<object class="wxButton" name="ID_BUTTON2" variable="Button1" member="yes">
+							<label>Restore</label>
+							<handler function="OnButtonRestoreClick" entry="EVT_BUTTON" />
+						</object>
+						<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+						<border>5</border>
+						<option>1</option>
+					</object>
+					<object class="sizeritem">
+						<object class="wxButton" name="ID_BUTTON3" variable="Button2" member="yes">
+							<label>Cancel</label>
+							<handler function="OnButtonCancelClick" entry="EVT_BUTTON" />
+						</object>
+						<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+						<border>5</border>
+						<option>1</option>
+					</object>
+				</object>
+				<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+				<border>5</border>
+				<option>1</option>
+			</object>
 		</object>
 		<object class="wxFileDialog" variable="FileDialog1" member="yes">
-			<message>Select file</message>
+			<message>Select a file</message>
 		</object>
 	</object>
 </wxsmith>
