small changes to support wxWidgets 3.0
git-svn-id: svn://svn.code.sf.net/p/partmodproject/code/trunk@54 3d63fe75-a90b-4577-b595-b0b07fb0d485

--- a/wxGUI/wxsmith/DlgNewPart.wxs
+++ b/wxGUI/wxsmith/DlgNewPart.wxs
@@ -17,6 +17,7 @@
 							<include_file>ctrl__partition.h</include_file>
 							<local_include>1</local_include>
 							<size>400,74</size>
+							<handler function="OnPartitionViewLeftDClick" entry="EVT_LEFT_DCLICK" />
 							<handler function="OnPartitionViewMouseMove" entry="EVT_MOTION" />
 						</object>
 						<flag>wxALL|wxEXPAND|wxSHAPED|wxALIGN_LEFT|wxALIGN_CENTER_VERTICAL</flag>
